Realign buttons, reformat rendering code to avoid duplication
still needs css work

--- a/src/style.css
+++ b/src/style.css
@@ -65,6 +65,19 @@
     cursor: pointer;
 }
 
+.points-box {
+    /* Align content in a row */
+    display: flex;
+}
+
+.points-button {
+    /* TODO: Något här är funky asså */
+    height: 50%;
+    position: fixed;
+    margin: 10px;
+    padding: 10px;
+}
+
 .player-input-group {
     padding-top: 10px;
 }
